# logistics-robots

./: .gitmodules  README.md
API/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json
API/src/: index.ts
GUI/: .eslintrc.json  .gitignore  .stylelintrc.json  angular.json  angular.webpack.js  package-lock.json  package.json  tsconfig.base.json
GUI/src/: index.html  polyfills.ts  tsconfig.app.json  tsconfig.spec.json  typings.d.ts
benchmarks/: generate_benchmarks.py  read_custom_results.py  read_results.py  run_benchmarks.py  run_custom_benchmarks.py
docker/: docker-compose.yml
docker/node-api/: Dockerfile
docker/node-gui/: Dockerfile
ros2_ws/src/turtlebot3_nav/: CMakeLists.txt  package.xml
ros2_ws/src/turtlebot3_nav/configuration/: robots.json
ros2_ws/src/turtlebot3_nav/launch/: bringup_launch.py  localization_launch.py  multi_tb3_simulation_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_simulation_launch.py  waypoints_follower_launch.py
ros2_ws/src/turtlebot3_nav/maps/: povo.yaml
ros2_ws/src/turtlebot3_nav/models/povo/: model.config
ros2_ws/src/turtlebot3_nav/models/povo/meshes/: povo.dae
ros2_ws/src/turtlebot3_nav/models/turtlebot3_burger/: model.config  model.sdf
ros2_ws/src/turtlebot3_nav/params/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
ros2_ws/src/turtlebot3_nav/rviz/: nav2_default_view.rviz  nav2_namespaced_view.rviz
ros2_ws/src/turtlebot3_nav/src/: follow_waypoints_client.cpp
ros2_ws/src/turtlebot3_nav/worlds/: povo.world
scripts/: .gitignore
(+125 files in other folders)
